# PlayAural

./: .gitignore  AGENTS.md  CLAUDE.md  PlayAural.spec  README.md  clean_pycache.bat  find_unused_strings.py  requirements.txt  test_db.py  test_updater.py  updater.spec
client/: client.py  config_manager.py  network_manager.py  pyproject.toml  run_client.bat  sound_cacher.py  sound_manager.py  updater.py
client/locales/en/: client.ftl
client/locales/fa/: client.ftl
client/locales/vi/: client.ftl
client/tests/: test_chat_input_refresh.py
client/ui/: __init__.py  login_dialog.py  main_window.py  menu_list.py  options_dialog.py  registration_dialog.py
devdoc/: menu-flush-phase2.md
mobile_client/: app.json  package-lock.json  package.json
server/: __init__.py  __main__.py  cli.py  main.py  menu_pagination.py  playaural_test.db  playaural_test_migrate.db  pyproject.toml  run_server.bat  sc.sh  server_control.sh
server/administration/: manager.py
server/auth/: auth.py  rate_limit.py
server/core/: power.py  server.py  smtp_mailer.py
server/documentation/: manager.py
server/game_utils/: __init__.py  action_execution_mixin.py  action_set_creation_mixin.py  action_visibility_mixin.py  actions.py  bot_names.py  dice.py  dice_game_mixin.py  event_handling_mixin.py  game_prediction_mixin.py  game_result_mixin.py  game_scores_mixin.py  lobby_actions_mixin.py  menu_management_mixin.py  options.py  teams.py  (+1 more)
web_client/: app.js  config.sample.js  game.js  index.html  keybinds.js  lang-selector.css  locales.js  manifest.json  network.js  style.css  sw.js
(+299 files in other folders)
